# anro-pawlak_pierczyk

./: README.md
beginner_tutorials/src/: listener.cpp  talker.cpp
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/include/beginner_tutorials/: Num.h
catkin_ws/devel/lib/beginner_tutorials/: listener  talker
catkin_ws/devel/lib/pkgconfig/: beginner_tutorials.pc
catkin_ws/devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-extras.cmake  beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
catkin_ws/devel/share/roseus/ros/beginner_tutorials/: manifest.l
catkin_ws/install/: setup.sh
catkin_ws/install/lib/pkgconfig/: beginner_tutorials.pc
catkin_ws/install/share/beginner_tutorials/: package.xml
catkin_ws/install/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
catkin_ws/src/beginner_tutorials/: CMakeLists.txt
catkin_ws/src/beginner_tutorials/src/: add_two_ints_client.cpp  talker.cpp
manipulator_description/: CMakeLists.txt  package.xml
manipulator_description/launch/: dh2urdf.launch  dhtorpy.launch
manipulator_description/param/: dhparams.yaml  urdfparam.yaml
manipulator_description/src/: dh2urdf.cpp  dh_to_rpy_client.cpp  dh_to_rpy_server.cpp  dhtorpy_server.cpp  getrpy.cpp
manipulator_description/srv/: DhToRPY.srv
manipulator_description/urdf/: moving.urdf
manipulator_description_exercise_2/launch/: fixed.launch  moving.launch
manipulator_description_exercise_2/param/: dhparams.yaml
manipulator_interpolation/: CMakeLists.txt  package.xml
manipulator_interpolation/msg/: frame_pose.msg
manipulator_interpolation/src/: kinematic.cpp  oint.cpp
manipulator_interpolation/src/commands/: jint_linear_command.txt
manipulator_interpolation/srv/: oint_control_srv.srv
manipulator_interpolation_exercise_4/launch/: interpolation.launch
manipulator_interpolation_exercise_4/msg/: frame_vel.msg
manipulator_interpolation_exercise_4/src/: jint.cpp
manipulator_interpolation_exercise_4/src/commands/: jint_cubic_command.txt  oint_cubic_command.txt  oint_linear_command.txt
manipulator_interpolation_exercise_4/srv/: jint_control_srv.srv  joint_state.srv
manipulator_kinematics/: CMakeLists.txt  package.xml
manipulator_kinematics/launch/: simple_kinematic.launch
manipulator_kinematics/src/: forward_kinematic.cpp  forward_kinematic_kdl.cpp  simple_kinematic.cpp
manipulator_kinematics_exercise_3/launch/: forward_kinematic.launch
manipulator_kinematics_exercise_3/src/: forward_kinematic.cpp
turtle_control/launch/: custom_turtle_control.launch
turtle_control/src/: turtle_controller.cpp
turtle_control_exercise_1/: CMakeLists.txt  package.xml
