<?xml version="1.0"?>
<package format="2">

  <name>manipulator_kinematics</name>
  <version>0.0.0</version>
  <description>The manipulator_kinematics package</description>
  <maintainer email="krzysiek@todo.todo">krzysiek</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>ros_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>

  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>ros_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>urdf</build_export_depend>

  <exec_depend>ros_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <!-- EXPORTS -->
  </export>
</package>
